# QMLTemplate

./: .gitignore  CMakeLists.txt  CodingStyle.cc  CodingStyle.h  CodingStyle.qml  QMLCommon.pri  README.md  TODO.md  qmltemplate.pro  qmltemplate.qrc  resources.qrc
.github/actions/upload/: action.yml
.github/workflows/: linux.yml  windows.yml
UI/: CMakeLists.txt  MainRootWindow.qml  MainWindow.qml
UI/QMLTemplate/ScreenTools/: qmldir  screentools.qmltypes
UI/source/: CMakeLists.txt
UI/source/ScreenTools/: CMakeLists.txt  RegExpTools.qml  ScreenTools.qml  UIConstants.qml
cmake/: Qt5Configuration.cmake
config/: App.SettingsGroup.json  Units.SettingsGroup.json
deploy/docker/: Dockerfile  run_docker.sh
deploy/jenkins/: Jenkinsfile
deploy/linux/: qml-start.sh  qml.desktop
deploy/windows/: nullsoft_installer.nsi  resource.h  sample.rc
libs/: README.md
src/: CMakeLists.txt  CmdLineOptParser.cpp  CmdLineOptParser.h  QMLApplication.cpp  QMLApplication.h  QMLToolbox.cpp  QMLToolbox.h  RunGuard.cpp  RunGuard.h  main.cpp
src/DeviceManager/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.h
src/FactSystem/: CMakeLists.txt  Fact.cpp  Fact.h  FactGroup.cpp  FactGroup.h  FactMetaData.cpp  FactMetaData.h  FactSystem.cpp  FactSystem.h  FactValueSliderListModel.cpp  SettingsFact.cpp
src/QMLControls/: CMakeLists.txt  QmlGlobal.cpp  QmlGlobal.h
src/QmlControls/: CMakeLists.txt  QmlObjectListModel.cpp  QmlPalette.cpp  QmlPalette.h
src/Settings/: AppSettings.cpp  AppSettings.h  CMakeLists.txt  SettingsGroup.cpp  SettingsGroup.h  SettingsManager.cpp  SettingsManager.h  UnitsSettings.cpp
src/Utilities/: CMakeLists.txt  JsonHelper.cpp  JsonHelper.h  QML.cpp  QML.h  QMLLoggingCategory.cpp  QMLLoggingCategory.h  QMLUtilities.cpp  QMLUtilities.h
src/api/: CMakeLists.txt  QMLCorePlugin.cpp  QMLCorePlugin.h  QMLOptions.cpp  QMLOptions.h  QMLSettings.cpp  QMLSettings.h
test/: CMakeLists.txt  QMLTest.pri  UnitTest.qrc  UnitTestList.cpp  UnitTestList.h  qtlogging.ini
test/DeviceManager/: CMakeLists.txt  DeviceManagerTest.cpp  DeviceManagerTest.h
test/UI/: CMakeLists.txt  TestWindow.qml
test/qmlunittest/: CMakeLists.txt  MainWindowTest.cpp  MainWindowTest.h  UnitTest.cpp  UnitTest.h
tools/setup/: install-dependencies.sh
